[package]
name = "opengl_proj"
version = "0.1.0"
authors = ["martinsg88@gmail.com <martinsg88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.31.0", features = ["bundled", "static-link", "use_mac_framework"] }
gl = "0.10.0"
